# sistema

./: .coverage  .gitignore  alembic.ini  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: e5ac32a164ed_tabela_de_funcionarios.py
sistema/: app.py  database.py  funcionarios_models.py  funcionarios_schemas.py  funcoes_auxiliares.py  security.py  settings.py  ti_models.py
sistema/routers/: funcionarios.py
tests/: conftest.py  test_funcionarios.py
