[project]
name = "sistema"
version = "0.1.0"
description = ""
authors = [
    {name = "duartex_",email = "mayckonkennedy877@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, < 4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 150
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "fastapi dev sistema/app.py"
test = "pytest -s -x --cov=sistema -vvv"
pre_format = "ruff check --fix"
pre_test = "task lint"
post_test = "coverage html"
